# thinking

./: .gitignore  GITHUB_SETUP.md  README.en.md  README.md  package.json
apps/api/: TROUBLESHOOTING.md  check_and_fix.py  pyproject.toml  requirements.txt  test_full_workflow.py
apps/api/app/: main.py
apps/api/app/core/: config.py
apps/api/app/db/: models.py  session.py
apps/api/app/providers/: __init__.py  azure_tts_adapter.py  image_provider.py  image_provider_factory.py  mock_image_provider.py  mock_tts_provider.py  stable_diffusion_adapter.py  tts_provider.py  tts_provider_factory.py
apps/api/app/repositories/: asset_repository.py  document_repository.py  episode_repository.py  qa_repository.py  review_repository.py  shot_repository.py  stage_task_repository.py  workflow_repository.py
apps/api/app/schemas/: shot.py  workspace.py
apps/api/app/services/: asset_service.py  image_render_input_builder.py  image_render_stage.py  media_workflow_service.py  object_storage_service.py  preview_export_stage.py  provider_monitor.py  qa_runtime.py  qa_stage.py  review_service.py  shot_service.py  shot_validation_service.py  store.py  subtitle_generation_stage.py  text_workflow_service.py  tts_stage.py  workflow_service.py
apps/api/docs/: IMAGE_PROVIDER_ADAPTER.md  OBJECT_STORAGE_SETUP.md  QA_RUNTIME.md
apps/api/scripts/: demo_asset_selection.py  test_object_storage.py  validate_asset_structure.py  validate_shot_integrity.py
apps/api/tests/: test_workflow_simple.py
apps/api/tests/unit/: test_asset_service.py  test_image_provider.py  test_image_render_stage.py  (+11 more)
(+34 files in other folders)
