[project]
name = "thinking-api"
version = "0.1.0"
description = "API for the AI comic drama creator workspace"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.3.0",
  "sqlalchemy>=2.0.36",
  "psycopg[binary]>=3.2.3"
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
